--- a/src/components/Promo/Promo.scss
+++ b/src/components/Promo/Promo.scss
@@ -31,6 +31,6 @@
   &__text {
     font-size: 24px;
     line-height: 35px;
-    margin: 30px 0 25px 0;
+    margin: 10px 0;
   }
 }
